@@ -90,8 +90,10 @@ static int _dict_iter_get_users(char const* key, UNUSED_ARG(void* data), void* e
     if ((tmp = PyString_FromString(key)) == NULL)
         return 1;
 
-    if (PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra, tmp))
+    if (PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra, tmp)) {
+        Py_DECREF(tmp);
         return 1;
+    }
 
     *real_extra->extra = *real_extra->extra + 1;
 
@@ -105,18 +107,27 @@ static int _dict_iter_get_channels(char const* key, UNUSED_ARG(void* data), void
     if ((tmp = PyString_FromString(key)) == NULL)
         return 1;
 
-    if (PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra, tmp))
+    if (PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra, tmp)) {
+        Py_DECREF(tmp);
         return 1;
+    }
 
     *real_extra->extra = *real_extra->extra + 1;
     return 0;
 }
 
 static int _dict_iter_get_servers(char const* key, UNUSED_ARG(void* data), void* extra) {
+    PyObject* tmp;
     struct _tuple_dict_extra* real_extra = (struct _tuple_dict_extra*)extra;
 
-    PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra,
-            PyString_FromString(key));
+    if ((tmp = PyString_FromString(key)) == NULL)
+        return 1;
+
+    if (PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra, tmp)) {
+        Py_DECREF(tmp);
+        return 1;
+    }
+
     *real_extra->extra = *real_extra->extra + 1;
     return 0;
 }
@@ -188,7 +199,8 @@ emb_get_channels(UNUSED_ARG(PyObject* self), PyObject* args) {
 static PyObject*
 emb_get_servers(UNUSED_ARG(PyObject* self), PyObject* args) {
     PyObject* retval;
-    size_t n = 0;
+    PyObject* tmp;
+    size_t n = 0, i;
     struct _tuple_dict_extra extra;
 
     if (!PyArg_ParseTuple(args, ""))
@@ -199,7 +211,15 @@ emb_get_servers(UNUSED_ARG(PyObject* self), PyObject* args) {
     extra.extra = &n;
     extra.data = retval;
 
-    dict_foreach(servers, _dict_iter_get_servers, (void*)&extra);
+    if (dict_foreach(servers, _dict_iter_get_servers, (void*)&extra) != NULL) {
+        for (i = 0; i < n; ++i) {
+            tmp = PyTuple_GetItem(retval, i);
+            PyTuple_SET_ITEM(retval, i, NULL);
+            Py_DECREF(tmp);
+        }
+        Py_DECREF(retval);
+        return NULL;
+    }
 
     return retval;
 }
